--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
             margin-bottom: 8px;
         }
 
-        input, select {
+        select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            font-size: 16px;
+            box-sizing: border-box;
+        }
+
+        input {
             padding: 10px;
             margin-bottom: 20px;
             border: 1px solid #ddd;
