--- a/optimal_draw_calculator.html
+++ b/optimal_draw_calculator.html
@@ -71,6 +71,9 @@
         <div id="result-round3"></div>
         <div id="total-result"></div>
     </div>
+    <footer>
+        Develop by null (H68)
+    </footer>
 
     <script src="script.js"></script>
 </body>
