--- a/index.html
+++ b/index.html
@@ -361,5 +361,13 @@
     <footer>
         Develop by null (H68)
     </footer>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-41FZMXQX72"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-41FZMXQX72');
+    </script>
 </body>
 </html>
