--- a/calender.html
+++ b/calender.html
@@ -103,6 +103,14 @@
         }
     </style>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-41FZMXQX72"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-41FZMXQX72');
+</script>
 <body>
     <div id="header">해적이야기 캘린더</div>
     <div id="calendar"></div>
