--- a/calender.html
+++ b/calender.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>해적이야기 캘린더 / Bounty Pirates Calendar</title>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="해적이야기 캘린더 / Bounty Pirates Calendar">
+    <meta property="og:description" content="해적이야기 캘린더에서 이벤트 일정을 확인하세요.">
+    <meta property="og:image" content="https://donnemse.github.io/draw-calculator/calender_image.png">
+    <meta property="og:url" content="https://donnemse.github.io/draw-calculator/calender.html">
     <!-- FullCalendar CSS -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
     <style>
