--- a/calender.html
+++ b/calender.html
@@ -9,6 +9,8 @@
     <meta property="og:description" content="해적이야기 캘린더에서 이벤트 일정을 확인하세요.">
     <meta property="og:image" content="https://donnemse.github.io/draw-calculator/calender_image.png">
     <meta property="og:url" content="https://donnemse.github.io/draw-calculator/calender.html">
+
+    <link rel="icon" href="https://donnemse.github.io/draw-calculator/favicon.ico" type="image/x-icon">
     <!-- FullCalendar CSS -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
     <style>
