--- a/calender.html
+++ b/calender.html
@@ -55,6 +55,22 @@
             padding: 0px;
         }
 
+        .fc-day-sat {
+          background: #007eff21 !important;
+          color: #7174f3
+        }
+        
+        .fc-day-sun {
+          background: #ff000017 !important;
+          color: #ff000082;
+        }
+
+        .fc-day-today {
+          background: #ffb10066 !important;
+          color: #ff000082;
+          font-weight: bold;
+        }
+
         .fc-header-toolbar {
             display: flex;
             justify-content: space-between;
