--- a/calendar.html
+++ b/calendar.html
@@ -350,7 +350,7 @@
                     sanctuary99: '99Sanctuary',
                     voyages: 'Voyages',
                     gacha: 'Gacha',
-                    end65: '65끝',
+                    end65: 'End65',
                     trainingPath: 'Training Path'
                 }
             };
