--- a/calendar.html
+++ b/calendar.html
@@ -198,6 +198,7 @@
 
   gtag('config', 'G-41FZMXQX72');
 </script>
+<script async src="./analytics.js"></script>
 <body>
     <div id="header">해적이야기 캘린더</div>
     <div class="language-switch">
