--- a/calendar.html
+++ b/calendar.html
@@ -214,6 +214,7 @@
             <button id="link1-btn">Draw Calcurator</button>
             <button id="link2-btn">Optimal Draw</button>
         </div>
+        <p id="errorMsg"></p>
     </footer>
 
     <!-- FullCalendar JS -->
